[package]
name = "pears"
version = "0.1.0"
authors = ["Richard Howard <richard@howard.io>"]

[dependencies]
reqwest = "0.9.2"
clap = "2.31.2"
serde = "1.0.66"
serde_json = "1.0.21"
serde_derive = "1.0.66"
shellexpand = "1.0.0"
slog = "2.2.3"
console = "0.6.1"
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.7"
regex = "1"
