[package]
name = "pears"
version = "1.2.5"
authors = ["Richard Howard <richard@howard.io>"]
description = "A simple tool for viewing open pull requests."
license = "MIT"
readme = "README.md"
repository = "https://github.com/rthoward/pears"
categories = ["command-line-utilities"]

[dependencies]
reqwest = "0.9.2"
clap = "2.31.2"
serde = "1.0.66"
serde_json = "1.0.21"
serde_derive = "1.0.66"
shellexpand = "1.0.0"
console = "0.6.1"
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.7"
regex = "1"
